# THERMALCAMERA_S3

./: .gitignore  MLX90640_API.cpp  MLX90640_I2C_Driver_ATOMS3.cpp  MLX90640_I2C_Driver_ATOMS3.h  README.md  THERMALCAMERA_S3.ino  area_temp.py  genindex.html  index.html  live_temp.py  modules.html  objects.inv  pixel_temp.py  py-modindex.html  pyproject.toml  receive_data.py  requirements.txt  search.html  searchindex.js  setup.sh  state.py  thermocam.html
.github/workflows/: python-app.yml  sphinx.yml
THERMALCAMERA_S3/: __init__.py  controlpanel.py  stuff.py  videomaker.py
_modules/: index.html
_modules/thermocam/: callbacks.html  controls.html  handler.html  roi.html  settings.html  videomaker.html  visualization.html
_sources/: index.rst.txt
docs/source/: conf.py  index.rst  modules.rst  thermocam.rst
scripts/: receive_data.py  send_settings.py
tests/: image.txt  test_controls.py  test_receive_data.py  test_visualization.py
therm_atom/: therm_atom.ino
thermal_S3/: thermal_S3.ino
thermocam/: __init__.py  callbacks.py  controls.py  handler.py  roi.py  settings.py  videomaker.py  visualization.py
